--- a/Testing_Notebook.ipynb
+++ b/Testing_Notebook.ipynb
@@ -50,7 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
+   "id": "f1b5b220-9a91-480c-ae1d-66a0fad9b13b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "17b0f92e-e18c-4652-a82a-12ee0ec06839",
    "metadata": {},
    "outputs": [
@@ -567,7 +577,7 @@
        "[400 rows x 58 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "829cea9f-03fb-4d21-84f7-bf715fd191e5",
    "metadata": {},
    "outputs": [
@@ -1096,7 +1106,7 @@
        "[400 rows x 57 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,9 +1118,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "2bb6e0a6-048f-4056-8a99-d0c8298583ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_to_drop = [\n",
+    "    'Stddev No. Of Symbols per Categorical Features', \n",
+    "    'Stddev No. Of Significant Lags in Target', \n",
+    "    'Stddev No. Of Insignificant Lags in Target', \n",
+    "    'Stddev No. Of Seasonality Components in Target'\n",
+    "]\n",
+    "df = df.drop(columns=features_to_drop, errors='ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
    "id": "763f951f-4bf9-4ac2-8406-58e141feb154",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1185,102 +1213,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "29a2323b-55f8-49e4-a2a4-dbdefafc4868",
+   "execution_count": 15,
+   "id": "6f11aeb7-73b0-459e-a59a-a45f20349af0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.optimize import minimize\n",
+    "class TemperatureScaling:\n",
+    "    def __init__(self):\n",
+    "        self.temperature = None\n",
+    "\n",
+    "    def fit(self, logits, y_true):\n",
+    "        \"\"\"\n",
+    "        Fit the temperature scaling parameter using the training data.\n",
+    "\n",
+    "        Args:\n",
+    "            logits (np.array): Logits (raw output from the model).\n",
+    "            y_true (np.array): True labels.\n",
+    "        \"\"\"\n",
+    "        def loss_fn(T):\n",
+    "            scaled_logits = logits / T\n",
+    "            probs = np.exp(scaled_logits) / np.sum(np.exp(scaled_logits), axis=1, keepdims=True)\n",
+    "            log_likelihood = -np.log(probs[np.arange(len(y_true)), y_true])\n",
+    "            return np.mean(log_likelihood)\n",
+    "\n",
+    "        # Optimize temperature\n",
+    "        result = minimize(loss_fn, x0=np.ones(1), bounds=[(0.1, 10)])\n",
+    "        self.temperature = result.x[0]\n",
+    "\n",
+    "    def transform(self, logits):\n",
+    "        \"\"\"\n",
+    "        Apply the temperature scaling to logits.\n",
+    "\n",
+    "        Args:\n",
+    "            logits (np.array): Logits (raw output from the model).\n",
+    "\n",
+    "        Returns:\n",
+    "            np.array: Scaled probabilities.\n",
+    "        \"\"\"\n",
+    "        scaled_logits = logits / self.temperature\n",
+    "        probs = np.exp(scaled_logits) / np.sum(np.exp(scaled_logits), axis=1, keepdims=True)\n",
+    "        return probs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0837d745-e319-4d9b-8521-11c8dd7d9290",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Temperature Scaling - Confidence (Avg): 0.7290\n"
+      "Temperature Scaling - Confidence (Avg) (Loaded Model): 0.7290\n"
      ]
     }
    ],
    "source": [
     "import joblib\n",
+    "import numpy as np\n",
     "\n",
-    "# Loading the RandomForest model\n",
-    "loaded_final_model = joblib.load('final_model.pkl')\n",
+    "# Load the saved model and temperature scaler\n",
+    "loaded_model_and_scaler = joblib.load('final_model_with_temp_scaling.pkl')\n",
     "\n",
-    "# Loading the Temperature Scaling model\n",
-    "loaded_temperature_scaler = joblib.load('temperature_scaler.pkl')\n",
+    "# Extract the RandomForest model and temperature scaler from the loaded dictionary\n",
+    "loaded_model = loaded_model_and_scaler['model']\n",
+    "loaded_temperature_scaler = loaded_model_and_scaler['temperature_scaler']\n",
     "\n",
-    "# Using the models\n",
-    "logits = np.log(loaded_final_model.predict_proba(df) + 1e-8)\n",
-    "y_pred_proba_scaled = loaded_temperature_scaler.transform(logits)\n",
+    "# Use the loaded model and temperature scaler to make predictions\n",
+    "y_proba_loaded = loaded_model.predict_proba(df)\n",
+    "logits_loaded = np.log(y_proba_loaded + 1e-8)  # For numerical stability\n",
     "\n",
-    "confidence = np.max(y_pred_proba_scaled, axis=1)\n",
-    "print(f\"Temperature Scaling - Confidence (Avg): {np.mean(confidence):.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "befdd156-a238-4cd4-aed0-fdbeaced6610",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'ELASTICNETCV': 7.944891119829134e-10, 'HUBERREGRESSOR': 0.09174518476290221, 'LASSO': 0.04749160848035781, 'LinearSVR': 0.19160172766619232, 'QUANTILEREGRESSOR': 0.015493822448004764, 'XGBRegressor': 0.6536676558480538}\n",
-      "{'ELASTICNETCV': 0.027372049955893794, 'HUBERREGRESSOR': 0.1042607401712491, 'LASSO': 0.1289301701844522, 'LinearSVR': 0.0901357471196371, 'QUANTILEREGRESSOR': 0.008805826867571557, 'XGBRegressor': 0.6404954657011963}\n",
-      "{'ELASTICNETCV': 0.00019955332916260686, 'HUBERREGRESSOR': 0.4982559318412197, 'LASSO': 0.11831386247884244, 'LinearSVR': 0.2138373567639195, 'QUANTILEREGRESSOR': 0.014124707497332337, 'XGBRegressor': 0.15526858808952346}\n",
-      "{'ELASTICNETCV': 7.895994591135872e-10, 'HUBERREGRESSOR': 0.18685923108350158, 'LASSO': 0.047731468541585165, 'LinearSVR': 0.6834069419058753, 'QUANTILEREGRESSOR': 0.057373323142479095, 'XGBRegressor': 0.02462903453695954}\n",
-      "{'ELASTICNETCV': 0.0013770880546990047, 'HUBERREGRESSOR': 0.23762708377444466, 'LASSO': 0.052381617810686766, 'LinearSVR': 0.1715899901296951, 'QUANTILEREGRESSOR': 0.08236795036385207, 'XGBRegressor': 0.4546562698666223}\n",
-      "{'ELASTICNETCV': 0.00790312805647016, 'HUBERREGRESSOR': 0.7696329487309768, 'LASSO': 0.02210195389819385, 'LinearSVR': 0.1021470258384432, 'QUANTILEREGRESSOR': 0.06250738452551807, 'XGBRegressor': 0.03570755895039804}\n",
-      "{'ELASTICNETCV': 0.00019623293026325267, 'HUBERREGRESSOR': 0.06881207300495824, 'LASSO': 0.46254138197896616, 'LinearSVR': 0.38640112037926566, 'QUANTILEREGRESSOR': 0.017557914499932895, 'XGBRegressor': 0.06449127720661382}\n",
-      "{'ELASTICNETCV': 6.935372550081603e-10, 'HUBERREGRESSOR': 0.00344674217581523, 'LASSO': 0.005175816690524678, 'LinearSVR': 0.005555741065898793, 'QUANTILEREGRESSOR': 0.002756979610953498, 'XGBRegressor': 0.9830647197632706}\n",
-      "{'ELASTICNETCV': 7.81059758489063e-10, 'HUBERREGRESSOR': 0.08441480668372146, 'LASSO': 0.07610432230780356, 'LinearSVR': 0.7314742953063832, 'QUANTILEREGRESSOR': 0.005761789355604752, 'XGBRegressor': 0.10224478556542729}\n",
-      "{'ELASTICNETCV': 8.455980463330391e-10, 'HUBERREGRESSOR': 0.21151334847316294, 'LASSO': 0.1815655305714191, 'LinearSVR': 0.3389170861437066, 'QUANTILEREGRESSOR': 0.2130952052483873, 'XGBRegressor': 0.05490882871772605}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 4. Apply temperature scaling on the logits\n",
-    "y_pred_proba_scaled = loaded_temperature_scaler.transform(logits)\n",
+    "# Apply temperature scaling to get the calibrated probabilities\n",
+    "y_pred_proba_scaled_loaded = loaded_temperature_scaler.transform(logits_loaded)\n",
     "\n",
-    "# 5. Get predicted class and confidence\n",
-    "y_pred_class = np.argmax(y_pred_proba_scaled, axis=1)\n",
-    "confidence = np.max(y_pred_proba_scaled, axis=1)\n",
-    "\n",
-    "# 6. Generate the dictionary output for each sample\n",
-    "class_names = ['ELASTICNETCV', 'HUBERREGRESSOR', 'LASSO', 'LinearSVR','QUANTILEREGRESSOR' , 'XGBRegressor']\n",
-    "\n",
-    "# For each sample, create a dictionary of class names and their corresponding probabilities\n",
-    "predictions = [\n",
-    "    {class_name: prob for class_name, prob in zip(class_names, probs)} \n",
-    "    for probs in y_pred_proba_scaled\n",
-    "]\n",
-    "\n",
-    "# Example: Print out the first 10 predictions in the desired format\n",
-    "for pred in predictions[:10]:  # Displaying the first 10 predictions\n",
-    "    print(pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "7f73936d-3019-4550-b703-79944f853bab",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Python 3.12.4\n"
-     ]
-    }
-   ],
-   "source": [
-    "!python --version"
+    "# Calculate Confidence (or any other metrics)\n",
+    "confidence_loaded = np.max(y_pred_proba_scaled_loaded, axis=1)\n",
+    "print(f\"Temperature Scaling - Confidence (Avg) (Loaded Model): {np.mean(confidence_loaded):.4f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f980fe56-3c79-4a07-823b-d5dff4a807c8",
+   "id": "1d937d4d-cbb9-4bc8-bcf3-0cdb7eef21a7",
    "metadata": {},
    "outputs": [],
    "source": []
